fixing white space5

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,11 @@
   box-sizing: border-box;
 }
 
+.main-content {
+  height: 100vh; /* remplacé par */
+  height: calc(100 * var(--vh));
+}
+
 body, html {
   overflow-x: hidden;
 }
